--- a/saludconciencia/src/css/style.css
+++ b/saludconciencia/src/css/style.css
@@ -18,16 +18,17 @@ html {
   @media screen and (max-width: 1200px) {
     .user-nav {
       flex: 0 0 auto; } }
-  @media screen and (max-width: 992px) {
+  @media screen and (max-width: 992px) and (min-width: 768px) {
     .user-nav {
       flex: 0 0 100%;
       justify-content: space-evenly;
       padding: 1rem 0; } }
-  @media screen and (max-width: 768px) and (width: 769px) {
+  @media screen and (max-width: 767px) {
     .user-nav {
       display: block;
       padding-top: 2rem;
-      padding-bottom: 0; } }
+      padding-bottom: 0;
+      flex-direction: column; } }
   .user-nav > * {
     padding: 0 2rem;
     cursor: pointer;
@@ -523,6 +524,10 @@ html {
   padding: 3rem 6rem;
   display: flex;
   flex-direction: column; }
+  @media screen and (max-width: 576px) {
+    .showBlog__header {
+      padding: 3rem 3rem;
+      margin: 0; } }
   .showBlog__header__title {
     font-family: 'Lexend';
     font-weight: 700;
@@ -564,10 +569,15 @@ html {
 .showBlog__contenido__portada {
   width: 100%;
   height: 45rem; }
+  @media screen and (max-width: 576px) {
+    .showBlog__contenido__portada {
+      height: auto;
+      margin: 0rem 0rem !important; } }
   .showBlog__contenido__portada-img {
     width: 100%;
     max-height: 100%;
     object-fit: cover;
+    object-position: 50% 35%;
     top: 0;
     left: 0;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px; }
@@ -582,8 +592,15 @@ html {
   position: relative;
   padding: 0rem 6rem;
   font-size: 1.5rem; }
+  @media screen and (max-width: 576px) {
+    .showBlog__article__post {
+      padding: 0rem 3rem; } }
   .showBlog__article__post-item {
-    margin-bottom: 2rem; }
+    margin-bottom: 2rem;
+    word-break: break-word; }
+    @media screen and (max-width: 576px) {
+      .showBlog__article__post-item {
+        text-align: justify !important; } }
 
 .content-width {
   max-width: 992px;
@@ -669,6 +686,10 @@ html {
 .showBlog__contenido {
   position: relative;
   background-color: aliceblue; }
+  @media screen and (max-width: 576px) {
+    .showBlog__contenido {
+      display: flex;
+      flex-direction: column; } }
 
 /*
     BOOTSTRAP CHANGE
