--- a/saludconciencia/src/css/style.css
+++ b/saludconciencia/src/css/style.css
@@ -14,7 +14,8 @@ html {
   align-items: center;
   align-self: stretch;
   justify-content: center;
-  flex: 0 0 40%; }
+  flex: 0 0 40%;
+  margin: 0 auto; }
   @media screen and (max-width: 1200px) {
     .user-nav {
       flex: 0 0 auto; } }
@@ -57,18 +58,20 @@ html {
   @media screen and (max-width: 992px) {
     .user__icons {
       flex: 1; } }
-  .user__icons-item-icon {
-    height: 2.25rem;
-    width: 2.25rem;
-    fill: #00BE00; }
-    .user__icons-item-icon-twitter:hover {
-      fill: #0070BA; }
-    .user__icons-item-icon-tiktok:hover {
-      fill: #020023; }
-    .user__icons-item-icon-instagram:hover {
-      fill: #833AB4; }
-    .user__icons-item-icon-youtube:hover {
-      fill: red; }
+  .user__icons-item {
+    margin-left: 1rem; }
+    .user__icons-item-icon {
+      height: 2.25rem;
+      width: 2.25rem;
+      fill: #00BE00; }
+      .user__icons-item-icon-twitter:hover {
+        fill: #0070BA; }
+      .user__icons-item-icon-tiktok:hover {
+        fill: #020023; }
+      .user__icons-item-icon-instagram:hover {
+        fill: #833AB4; }
+      .user__icons-item-icon-youtube:hover {
+        fill: red; }
 
 .search {
   margin-right: 2rem;
