--- a/saludconciencia/src/sass/_components.scss
+++ b/saludconciencia/src/sass/_components.scss
@@ -102,13 +102,13 @@
             fill: $color-primary-green;
     
             &-twitter:hover {
-                fill: $color-primary-blue;
+                fill: #1DA1F2;
             }
             &-tiktok:hover {
                 fill: $color-primary-black;
             }
             &-instagram:hover {
-                fill: #833AB4;
+                fill: url(#rg);
             }
             &-youtube:hover {
                 fill: red;
