--- a/saludconciencia/src/sass/_inicio.scss
+++ b/saludconciencia/src/sass/_inicio.scss
@@ -14,6 +14,7 @@
 .index__slide {
     scroll-snap-align: start;
     height: 100vh;
+    width: 100%;
     display: flex;
     //Temporal
     justify-content: center;
@@ -287,4 +288,127 @@
             }
         }
     }
+
+    &__7{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        padding: 20rem 0;
+        background: $color_text_green;
+
+        &__textleft {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            flex: 1;
+            color: white;
+            margin-left: 10%;
+
+            &-up{
+                display: flex;
+                flex-direction: column;
+            }
+
+            &-down{
+                &-link:link,
+                &-link:visited {
+                    text-decoration: none;
+                    color: #BFBFBF;
+                    &:hover{
+                        color: lighten(#BFBFBF, 10%);
+                    }
+                }
+            }
+        }
+
+        &-logo{
+            flex: 0 0 50%;
+            width: 100%;
+            height: 100%;
+            fill: white;
+            padding: 5rem;
+        }
+    }
+
+    &__9{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+
+        &-img {
+            height: 100%;
+            padding: 10rem 0;
+            & > img {
+                height: 100%;
+                width: 100%;
+            }
+        }
+
+        &__textright {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            &-top{
+                display: flex;
+                flex-direction: column;
+            }
+
+            &-mid{
+                display: flex;
+                flex-direction: column;
+                margin-top: 2rem;
+            }
+
+            &-down{
+                display: flex;
+                justify-content: space-between;
+                margin-top: 10rem;
+            }
+        }
+    }
+}
+
+.index__icons {
+    &-item{
+        $size: 7rem;
+        height: $size;
+        width: $size;
+        fill: $color_text_green;
+        & > path {
+            //transition: fill .4s ease;
+        }
+
+        &-twitter {
+            &:hover{
+                fill: #1DA1F2;
+            }
+        }
+        &-tiktok {
+            &:hover {
+                fill: #000000;
+            }
+        }
+        &-youtube {
+            &:hover {
+                fill: #FF0000;
+            }
+        }
+        &-instagram {
+            & path {
+                fill: $color_text_green;
+            }
+            &:hover path{
+                fill: url(#rg);
+            }
+        }
+    }
+}
+path {
+    transition: fill .4s ease;
 }
