--- a/saludconciencia/src/sass/_components.scss
+++ b/saludconciencia/src/sass/_components.scss
@@ -1,306 +1,6 @@
-///////////////////////////////////////////////////////
-// LOGO
 
-.logo {
-    height: 3.25rem;
-    margin-left: 2rem;
-    @media screen and (max-width: 206px) {
-        height: 2rem;
-        margin: 0;
-    }
-}
-
-///////////////////////////////////////////////////////
-// USER NAVIGATION
-
-.user-nav {
-    display: flex;
-    align-items: center;
-    align-self: stretch;
-    justify-content: center;
-    flex: 0 0 40%;
-    margin: 0 auto;
-    
-    @media screen and (max-width: 1200px) {
-        flex: 0 0 auto;
-    }
-    
-    @media screen and (max-width: 992px) and (min-width: 768px) {
-        //order: -1;
-        flex: 0 0 100%;
-        justify-content: space-evenly;
-        padding: 1rem 0;
-    }
-
-    //Navbar collapse
-    //Problema con 769px
-    @media screen and (max-width: 767px) {
-        display: block;
-        padding-top: 2rem;
-        padding-bottom: 0;
-        flex-direction: column;
-    }
-
-    & > * {
-        padding: 0 2rem;
-        cursor: pointer;    //cambia el cursor por una de seleccion
-        height: 100%;
-        display: flex;
-        align-items: center;
-
-        @media screen and (max-width: 1200px) {
-            //padding: 1rem;
-        }
-
-        @media screen and (max-width: 768px) {
-            justify-content: center;
-        }
-
-        &:hover {
-            background-color: $color-gray-light-2;
-        }
-    }
-
-    &__link:link,
-    &__link:visited {
-        color: $color-primary-green;
-        text-decoration: none;
-        text-transform: uppercase;
-    }
-}
-
-///////////////////////////////////////////////////////
-// USER ICONS
-
-.user__icons {
-    display: flex;
-    align-items: center;
-    align-self: stretch;
-    justify-content: space-evenly;
-
-    //Temporal FIX!!
-    //flex-wrap: wrap;
-
-    @media screen and (max-width: 768px) {
-        justify-content: space-evenly;
-        padding: 2rem;
-    }
-
-    @media screen and (max-width: 992px) {
-        flex: 1;
-    }
-
-    &-item {
-        //padding: 0 2rem;
-        margin-left: 1rem;
-        @media screen and (min-width: 992px) {
-            //padding: 0 1rem;
-        }
-        &-icon {
-            height: 2.25rem;
-            width: 2.25rem;
-            fill: $color-primary-green;
-    
-            &-twitter:hover {
-                fill: #1DA1F2;
-            }
-            &-tiktok:hover {
-                fill: $color-primary-black;
-            }
-            &-instagram:hover {
-                fill: url(#rg);
-            }
-            &-youtube:hover {
-                fill: red;
-            }
-        }
-    }
-}
-
-///////////////////////////////////////////////////////
-// SEARCH
-.search {
-    margin-right: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    
-    &__form {
-        @media screen and (max-width: 768px) {
-            display: flex;
-            flex: 0 0 40%;
-            justify-content: center;
-        }
-    }
-
-    &__input {
-        //width: inherit;
-        background-color: darken($color-gray-light-3, 7%);
-        border: none;
-        padding: .7rem 2rem;
-        border-radius: 100px;
-        width: 90%;
-        margin-right: -3.25rem;
-        transition: all .2s;
-
-        &:focus {
-            outline: none;
-            width: 100%;
-            background-color: darken($color-gray-light-3,4%);
-        }
-    }
-
-    &__input:focus + &__button {
-        background-color: darken($color-gray-light-3,4%);
-    }
-
-    &__button {
-        border: none;
-        background-color: darken($color-gray-light-3, 7%);
-        padding: 0;
-        transition: all .2s;
-
-        &:focus {
-            outline: none;
-        }
-
-        &:active {
-            transform: translateY(2px);
-        }
-    }
-}
-
-
-
-
-///////////////////////////////////////////////////////
-// BLOGS RECIENTES
-
-.image-container {
-    min-height: 30rem;  //Permite que en el media query se adapte bien
-    display: flex;
-
-    @media screen and (max-width: 768px) {
-        flex-direction: column;
-    }
-
-    &-first {
-        height: 100%;
-        flex: 0 0 60%;
-        border: 1px solid $color-gray-dark-1;
-        position: relative;
-    }
-
-    &-second {
-        height: 100%;
-        flex: 1;
-        border: 1px solid $color-gray-dark-1;
-        position: relative;
-        
-        @media screen and (max-width: 768px) {
-            margin-top: 1rem;
-        }
-    }
-
-    &__info {
-        position: absolute;
-        bottom: 0;
-        background: rgb(0,0,0);
-        background: rgba(0,0,0,0.5);
-        color: #fff;
-        width: 100%;
-        
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-
-        &-tags {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            align-self: stretch;
-            flex-wrap: wrap;
-
-            &-item{
-                padding: 0 2rem;
-                background-color: $color-primary-blue;
-                border-radius: 10px;
-                cursor: pointer;
-                color: #fff;
-                margin-top: .5rem;
-                transition: all .2s;
-                
-                &:not(:last-child) {
-                    margin-right: 2rem;
-                }
-
-                &:first-child {
-                    margin-left: auto;
-                }
-
-                &:last-child {
-                    margin-right: auto;
-                }
-
-                &:hover {
-                    background-color: lighten($color-primary-blue, 5%);
-                    border-radius: 10px;
-                }
-            }
-        }
-
-        &-title {
-            font-family: "Poppins",sans-serif;
-            font-size: 1.8rem;
-            margin: 1rem auto;
-            cursor: pointer;
-        }
-
-        &__details {
-            font-family: "Poppins", sans-serif;
-            margin: 0 auto;
-        }
-
-        &-author {
-            font-size: 1rem;
-            & > span {
-                cursor: pointer;
-            }
-        }
-
-        &-date {
-            font-size: .6rem;
-        }
-
-        &-link:link,
-        &-link:visited {
-            text-decoration: none;
-            color: #fff;
-            text-align: center;
-            align-self: center;
-
-            &:hover {
-                color: darken(#fff,15%);
-            }
-        }
-        
-    }
-}
-
-.imageCard {
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-    cursor: pointer;
-    opacity: .85;
-    transition: all .2s;
-    &:hover {
-        opacity: 1;
-    }
-}
     ///////////////////////////////////////////////////////
-    // Tags y cards
+    // Tags y cards PlaceBlog.jsx
     .card-image {
         position: relative;
         min-height: 15rem;
@@ -341,13 +41,6 @@
             }
         }
     }
-
-///////////////////////////////////////////////////////
-// BLOGS RECIENTES
-
-
-
-
 
 ////////////////////////////////////////
 // ADMIN
@@ -811,148 +504,3 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-
-// .codex-editor {
-//     &__redactor {
-//         //padding-bottom: 10rem !important;
-//     }
-// }
-
-// .ce-block {
-//     &__content {
-//         //border-radius: 100px;
-//     }
-// }
-
-////////////////////////////////////////
-// BLOG SHOW
-
-.showBlog__header {
-    min-height: 15rem;
-    margin-top: -15rem;
-    background-color: #fff;
-    position: relative;
-    //box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0 -23px 25px, rgba(0, 0, 0, 0.08) 0 -2px 2px 0;
-    padding: 3rem 6rem;
-    display: flex;
-    flex-direction: column;
-    @media screen and (max-width: 576px) {
-        padding: 3rem 3rem;
-        margin: 0;
-    }
-
-    &__title{
-        font-family: 'Lexend';
-        font-weight: 700;
-        font-size: 3.5rem;
-        margin-top: 2rem;
-    }
-
-    &__autor {
-        margin-top: 2rem;
-        display: flex;
-        align-items: center;
-        &-img{
-            width: 5rem;
-            height: auto;
-            border-radius: 100px;
-            border: 1px solid black;
-        }
-        &__info{
-            margin-left: 2rem;
-            font-size: 1.5rem;
-            &-fecha{
-                color: rgb(117,117,117);
-            }
-
-            &-name > span{
-                //text-transform: uppercase;
-                //font-size: 2rem;
-                font-weight: 400;
-            }
-        }
-    }
-
-    &__tags{
-        display: flex;
-        align-items: center;
-
-        &-item {
-            border-radius: 100px;
-            background-color: $color-primary-green;
-            
-            padding: .5rem 1.5rem;
-            color: #fff;
-            text-transform: uppercase;
-            font-weight: 600;
-            letter-spacing: 1px;
-            cursor: pointer;
-            &:not(:first-child){
-                margin-left: 2rem;
-            }
-            &:hover{
-                background-color: lighten($color-primary-green, 5%);
-            }
-        }
-    }
-}
-
-.showBlog__contenido__portada {
-    width: 100%;
-    height: 45rem;
-    @media screen and (max-width: 576px) {
-        height: auto;
-        margin: 0rem 0rem !important;
-    }
-    &-img {
-        width: 100%;
-        max-height: 100%;
-        object-fit: cover;
-        object-position: 50% 35%;
-        //position: absolute;
-        top: 0;
-        left: 0;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-    }
-}
-
-//Article
-.showBlog__main{
-    //background-color: #fff;
-    z-index: 4;
-    font-family: 'Poppins';
-    font-size: 1rem;
-}
-
-.showBlog__article__post {
-    background-color: #fff;
-    position: relative;
-    padding: 0rem 6rem;
-    font-size: 1.5rem;
-    @media screen and (max-width: 576px) {
-        padding: 0rem 3rem;
-    }
-    &-item {
-        margin-bottom: 2rem;
-        word-break: break-word;
-        @media screen and (max-width: 576px) {
-            text-align: justify !important;
-        }
-    }
-}
-
-.content-width {
-    max-width: 992px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.article__img {
-    display: flex;
-    flex-direction: column;
-    & > span {
-        font-size: 1.2rem;
-        color: rgb(117,117,117);
-    }
-}
