--- a/saludconciencia/src/sass/_navbar.scss
+++ b/saludconciencia/src/sass/_navbar.scss
@@ -66,7 +66,8 @@
     &__link:visited {
         color: $color-primary-green;
         text-decoration: none;
-        text-transform: uppercase;
+        // text-transform: uppercase; no quiso letra mayus
+        font-weight: 600;
     }
 }
 
