Mas cambios a inicio.jsx
Ahora en Firefox y, espero en los demas, al cargarse la pagina de inicio se centra la diapositiva.
Esto gracias a un useEffect que se carga cuando el slide1 es referenciado. 
slide1.scrollIntoView({behavior: 'smooth'})

Solo lo hace la 1a vez que se carga, aunque bien podria hacerlo cuando la referencia a slide1 cambie, pero eso no lo hago nunca, asi que practicamente solo lo hace 1 vez, al cargar la pagina.

Ahora ... no se porque Firefox no funciona igual el movimiento de y mandatory como lo hace con Edge (y como es chromium, probablemente también funcione igual con Chrome o basados en chromium)

Que dolor de cabeza que las cosas funcionen bien o no dependiendo el navegador...

Tambien, los textos rotados en el slide 5, no se ven bien en firefox (*aaaaaaaaaaaaaaah!!!!*)

--- a/saludconciencia/src/sass/_inicio.scss
+++ b/saludconciencia/src/sass/_inicio.scss
@@ -5,20 +5,22 @@
 // }
 @import './colors';
 
-#root {
+.root2 {
     height: 100vh;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
+    //overflow: hidden;
 }
 
 .index__slide {
     scroll-snap-align: start;
+    scroll-snap-stop: always;
     height: 100vh;
     width: 100%;
     display: flex;
     //Temporal
-    justify-content: center;
-    align-items: center;
+    // justify-content: center;
+    // align-items: center;
 
     & > h1 {
         color: white;
