--- a/saludconciencia/src/sass/_footer.scss
+++ b/saludconciencia/src/sass/_footer.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    margin-top: 10rem;
+    margin-top: 50%;
 
     &-up{
         align-self: flex-end;
