--- a/saludconciencia/src/sass/_footer.scss
+++ b/saludconciencia/src/sass/_footer.scss
@@ -116,7 +116,10 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    margin-top: 10rem;
+    //margin-top: 10rem;
+    padding-top: 10rem;
+    //box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
     &-up{
         align-self: flex-end;
         margin-right: 10rem;
