--- a/saludconciencia/src/sass/_showBlog.scss
+++ b/saludconciencia/src/sass/_showBlog.scss
@@ -22,7 +22,6 @@
 
 //Article
 .showBlog__main{
-    //background-color: #fff;
     z-index: 4;
     font-family: 'Poppins';
     font-size: 1rem;
@@ -33,6 +32,7 @@
     position: relative;
     padding: 0rem 6rem;
     font-size: 1.5rem;
+
     @media screen and (max-width: 576px) {
         padding: 0rem 3rem;
     }
@@ -57,5 +57,35 @@
     & > span {
         font-size: 1.2rem;
         color: rgb(117,117,117);
+    }
+}
+
+.showBlog__share{
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 12rem 0;
+
+    &-title{
+        font-size: 1.8rem;
+        font-weight: 500;
+        margin-bottom: 2rem;
+        align-self: center;
+        text-align: center;
+    }
+    &__items{
+        & > button {
+            margin: 0rem 2rem;
+            opacity: .8;
+            @media screen and (max-width: 576px) {
+                margin: 2px 10px;
+            }
+
+            &:hover{
+                opacity: 1;
+            }
+        }
     }
 }
